# nya_basic_chat

./: .chat_history.json  .chat_prefs.json  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/nya_basic_chat/: app.py  auth.py  chat.py  config.py  db.py  feedback.py  helpers.py  llm_client.py  reset_pass.py  storage.py  ui.py  web.py
src/nya_basic_chat/rag/: cleanup.py  inject.py  processor.py  retriever.py
src/office_earnings/: llm_client.py
