[project]
name = "office-earnings"
version = "0.1.0"
description = "This project parses earnings report in PDFs to meaningful actionable spreadsheets"
authors = [
    {name = "ab1ndal",email = "bindal.abhinav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
packages = [{ include = "office_earnings", from = "src" }]
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
