[project]
name = "nya-basic-chat"
version = "0.1.0"
description = "This project exposes the chatbot end to internal teams"
authors = [
    {name = "ab1ndal",email = "bindal.abhinav@gmail.com"}
]
readme = "README.md"
packages = [{ include = "nya_basic_chat", from = "src" }]
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "openai (>=1.104.0,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "supabase (>=2.24.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "unstructured (>=0.18.20,<0.19.0)",
    "python-magic (>=0.4.27,<0.5.0)",
    "pypdf (>=6.3.0,<7.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pinecone (>=8.0.0,<9.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
black = "^25.1.0"
pre-commit = "^4.3.0"
pytest = "^8.4.1"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]